samplez-ns01/application-03/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: sample-deployment
  name: sample-application-01-vs
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/sample-application-01"
    route:
    - destination:
        port:
          number: 8080
        host: sample-application-01
